syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";
import "api/proto/resourcespb/kubernetes_node_pool.proto";

package dev.multy.resources;

message CreateKubernetesClusterRequest {
  KubernetesClusterArgs resource = 1;
}

message ReadKubernetesClusterRequest {
  string resource_id = 1;
}

message UpdateKubernetesClusterRequest {
  string resource_id = 1;
  KubernetesClusterArgs resource = 2;
}

message DeleteKubernetesClusterRequest {
  string resource_id = 1;
}

message KubernetesClusterOverrides {
  string project = 1;
}

message KubernetesClusterArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;
  string service_cidr = 3;
  string virtual_network_id = 4;

  KubernetesNodePoolArgs default_node_pool = 5;
  KubernetesClusterOverrides gcp_override = 6;
}

message KubernetesClusterAwsOutputs {
  string eks_cluster_id = 1;
  string iam_role_arn = 2;
}

message KubernetesClusterAzureOutputs {
  string aks_cluster_id = 1;
}


message KubernetesClusterGcpOutputs {
  string gke_cluster_id = 1;
  string service_account_email = 2;
}

message KubernetesClusterResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;
  string service_cidr = 3;
  KubernetesNodePoolResource default_node_pool = 4;
  string virtual_network_id = 5;
  KubernetesClusterOverrides gcp_override = 9;

  // outputs
  string endpoint = 6;
  string ca_certificate = 7;
  string kube_config_raw = 8;
  KubernetesClusterAwsOutputs aws_outputs = 10;
  KubernetesClusterAzureOutputs azure_outputs = 11;
  KubernetesClusterGcpOutputs gcp_outputs = 12;
}
